// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fret component -- other selection -- should not show selection if selectedLocation doesn't match 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- other selection -- should not show selection if selectedNote doesn't match 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- selectedLocations & highlights -- highlightOctaves=false, loc selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- selectedLocations & highlights -- highlightOctaves=true, loc selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    color="rgb(95, 190, 244)"
    isHighlighted={true}
  />
</styled.div>
`;

exports[`Fret component -- selectedLocations & labels -- showSelectionLabels=false, loc selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- selectedLocations & labels -- showSelectionLabels=true, loc selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  >
    <Content
      content="root"
      noteType="pitch"
      showEnharmonics={false}
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component -- selectedNotes & highlights -- highlightOctaves=false, note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- selectedNotes & highlights -- highlightOctaves=true, highlightSelections=true, note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- selectedNotes & highlights -- highlightOctaves=true, no note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    color="rgb(95, 190, 244)"
    isHighlighted={true}
  />
</styled.div>
`;

exports[`Fret component -- selectedNotes & labels -- showSelectionLabels=false, showNotes=false, note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;

exports[`Fret component -- selectedNotes & labels -- showSelectionLabels=false, showNotes=true, no note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  >
    <Content
      content="E2"
      noteType="pitch"
      showEnharmonics={false}
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component -- selectedNotes & labels -- showSelectionLabels=true, showNotes=false, note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  >
    <Content
      content="root"
      noteType="pitch"
      showEnharmonics={false}
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component -- selectedNotes & labels -- showSelectionLabels=true, showNotes=true, note selected 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  >
    <Content
      content="root"
      noteType="pitch"
      showEnharmonics={false}
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component -- selectedNotes & labels -- showSelectionLabels=true, showNotes=true, note selected 2`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  >
    <Content
      content="E2"
      noteType="pitch"
      showEnharmonics={false}
    />
  </styled.div>
</styled.div>
`;

exports[`Fret component defaultContext, no selections 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isHighlighted={false}
  />
</styled.div>
`;
